--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="logo-header">FURNITURE</div>
         <navbar>
             <div class="nav-item-wrap">
-                <div class="nav-item">Home</div>
+                <div class="nav-item active">Home</div>
                 <div class="nav-item">About Us</div>
                 <div class="nav-item">Products</div>
             </div>
@@ -133,7 +133,7 @@
                             <div class="material">Glossy Cube</div>
                         </div>
                         <div class="item2">
-                            <img src="Pictures/Frame 39.png" alt="">
+                            <img src="Asserts/spec-img-2.svg" alt="">
                         </div>
                     </div>
                     <img src="Pictures/unname.png" alt="" class="img6">
@@ -148,7 +148,7 @@
                             <div class="material">Wooden Side</div>
                         </div>
                         <div class="item2">
-                            <img src="Pictures/Frame 39.png" alt="">
+                            <img src="Asserts/spec-img-2.svg" alt="">
                         </div>
                     </div>
                     <img src="Pictures/unnamed (5) 1.png" alt="" class="img7">
@@ -163,7 +163,7 @@
                             <div class="material">Upholstery Sotka</div>
                         </div>
                         <div class="item2">
-                            <img src="Pictures/Frame 39.png" alt="">
+                            <img src="Asserts/spec-img-2.svg" alt="">
                         </div>
                     </div>
                     <img src="Pictures/unnamed (5) 1 (2).png" alt="" class="img8">
@@ -178,7 +178,7 @@
                             <div class="material">Headboard</div>
                         </div>
                         <div class="item2">
-                            <img src="Pictures/Frame 39.png" alt="">
+                            <img src="Asserts/spec-img-2.svg" alt="">
                         </div>
                     </div>
                     <img src="Pictures/unnamed (5) 1 (1).png" alt="" class="img9">
@@ -217,7 +217,7 @@
                 <div class="right"><img src="Asserts/right.svg" alt=""></div>
                 <div class="box1 c">
                     <div class="back">
-                        <img src="Pictures/Iconpack.png" alt="">
+                        <img src="Asserts/spec-img.svg" alt="">
                         <div class="text">
                             It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
                         </div>
@@ -230,7 +230,7 @@
 
                 <div class="box1">
                     <div class="back e">
-                        <img src="Pictures/Iconpack.png" alt="">
+                        <img src="Asserts/spec-img.svg" alt="">
                         <div class="text">
                             It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
                         </div>
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="front">
-                        <img src="Pictures/Female02.png" alt="">
+                        <img src="Asserts/spec-img.svg" alt="">
                         <div class="text">Lora Smith </div>
                     </div>
                 </div>
